2014-12-14: 
  - Correct buglet in 'recode' method for numeric vectors

2013-02-19:
  - Created 'codebook' method for factors (numeric vectors were already supported)
  - Included some bugfixes from the CRAN version of memisc
      - It is now 'row_names', not 'row.names' for data.set row names
      - Labeled values are coerced into numeric only if this is reasonable
        (thus labeled character variables are now supported as in the
        CRAN version of memisc)
      - 'recode' hopefully copes better with NA's
      - 'numeric_if_possible.c' is no longer in the package (it is already in memisc)

2013-01-04:
  - Corrected "initialize" method for "data.set" objects.
  - Some integration with RStudio: 'edit', 'View', and 'viewData' methods for
    objects of classes introduced by the package
  - Some updates of the documentation.
  
2012-07-21:
  - Created 'codebook' method for data frames
  - Modified and expanded version of 'within.data.frame':
      - If transformations result in an item object, 'within' returns
        a 'data.set' object
      - Like in the 'data.set' method of 'within', variables in the
        resulting data frame or 'data.set' object will appear in the
        order of their creation by the transformation in the call
        of 'within'.

2009-06-02:
  - as.factor methods for item vectors adapted to new factor function
    in R 2.10.0
  - Fixed bug in sample.data.frame and sample.data.set methods:
    Samples were drawn only from the first m observations, where m is
    the number of variables in the data frame/data set.